<resources>
    <string name="app_name">Newzzz</string>
    <string name="news_categories">News Categories</string>
    <string name="general">General</string>
    <string name="india">India</string>
    <string name="usa">USA</string>
    <string name="australia">Australia</string>
    <string name="russia">Russia</string>
    <string name="france">France</string>
    <string name="uk">UK</string>
    <string name="splashname">ITPL</string>
</resources>